add simple testcase

--- a/database/config/config.json
+++ b/database/config/config.json
@@ -8,10 +8,11 @@
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
+    "password": "Port:445",
+    "database": "boilerplate_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "production": {
     "username": "root",
